site/src/components/Layout.scss
@import "~@cultureamp/kaizen-component-library/components/NavigationBar/styles";
@import "~@cultureamp/kaizen-component-library/styles/type";
@import "~@cultureamp/kaizen-component-library/styles/color";
@import "~@cultureamp/kaizen-component-library/styles/responsive";

$content-max-width: $ca-grid * 57;

body {
  background-color: $ca-palette-stone;
  color: $ca-base-text-color;
  font-family: $ca-ideal-sans-font-family;
}

pre {
  white-space: normal;
  word-break: break-word;
}

.root {
  display: grid;
  min-height: 100vh;
  grid-template-areas:
    "navbar"
    "page";
  grid-template-columns: 1fr;
  grid-template-rows: [navigationBarContainer] $ca-navigation-bar__height [page] 1fr;
}

.navigationBarContainer {
  grid-area: navbar;
  height: $ca-navigation-bar__height;
}

.page {
  display: grid;
  grid-area: page;
  grid-template-rows: [titleBlockContainer] auto [contentContainer] 1fr;
}

.contentContainer {
  display: grid;
  justify-items: center;
  grid-template-columns: $ca-grid [content] 1fr $ca-grid;
}

.content {
  display: grid;
  grid-column: content;
  max-width: $content-max-width;
  width: 100%;
  padding: 0 0 $ca-grid;
  box-sizing: border-box;
}

